src/internal/vm/snapshots/hebi__internal__vm__tests__get_class_parent_field.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 10
class U(T):
  pass
U().v


# Result:
Int(
    10,
)
