src/internal/vm/snapshots/hebi__internal__vm__tests__if_stmt.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := true
result := none
if v:
  result = "true"
else:
  result = "false"
result


# Result:
Object(
    "true",
)
