src/internal/vm/snapshots/hebi__internal__vm__tests__import_fn.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
import test
test.test("yo")


# Result:
Object(
    "yo",
)
