src/internal/vm/snapshots/hebi__internal__vm__tests__import_fn_named.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
from test import test
test("yo")


# Result:
Object(
    "yo",
)
