src/internal/vm/snapshots/hebi__internal__vm__tests__import_value.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
import test
test.value


# Result:
Int(
    100,
)
