src/internal/vm/snapshots/hebi__internal__vm__tests__import_value_named.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
from test import value
value


# Result:
Int(
    100,
)
